# wandb-tui

./: README.md  justfile  pyproject.toml
.github/: dependabot.yml
.github/workflows/: pr-checks.yml
src/run/: app.py  controllers.py  filter.py  models.py  repositories.py  services.py  views.py
src/styles/: run.tcss
src/wandb_tui/: __init__.py  app.py
