[project]
name = "wandb-tui"
version = "0.1.0"
description = "WandB TUI tool"
readme = "README.md"
authors = [
    { name = "ikura-hamu", email = "104292023+ikura-hamu@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "jmespath>=1.0.1",
    "textual>=3.2.0",
    "wandb>=0.19.11",
]

[project.scripts]
wandb-tui = "wandb_tui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.11.11",
    "rust-just>=1.40.0",
    "textual-dev>=1.7.0",
    "ty>=0.0.1a10",
]
